<resources>
    <string name="app_name">My Application</string>
    <string name="hello_text">Hello World</string>
    <string name="register">注册</string>
    <string name="mobile">手机号:</string>
    <string name="password">密码:</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="todo" />
    <string name="message">信息</string>
    <string name="announce">公告</string>
    <string name="score">成绩</string>
    <string name="mine">我的</string>
    <string name="dialog_edit_content">请输入公告内容</string>
    <string name="extralscore">附加</string>
    <string name="award">奖学</string>
</resources>
