<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:minHeight="?attr/actionBarSize">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorTabSelectedPink"
                android:textSize="16sp"
                android:layout_gravity="end"
                android:padding="10dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/toolbar_register" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
        app:layout_constraintVertical_bias="0.1">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_mobile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/mobile"
            android:textColor="@color/colorSignInDarkGrey"
            android:textSize="15sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

        <View
            android:id="@+id/view_mobile_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="7dp"
            android:background="@color/colorSignInLightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_title" />

        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/password"
            android:textColor="@color/colorSignInDarkGrey"
            android:textSize="15sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_mobile_divider" />

        <View
            android:id="@+id/view_password_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="7dp"
            android:background="@color/colorSignInLightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_title" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorGradientStartPink"
            app:layout_constraintEnd_toEndOf="@+id/view_password_divider"
            app:layout_constraintTop_toBottomOf="@+id/view_password_divider" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:background="@drawable/selector_button_gradient_deafault_corner_21dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

        <TextView
            android:id="@+id/tv_register_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_button_gradient_deafault_corner_21dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <EditText
            android:id="@+id/et_mobile_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPersonalTextBlack"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_mobile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_mobile_title"
            app:layout_constraintTop_toTopOf="@+id/tv_mobile_title"
            android:autofillHints="" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPersonalTextBlack"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_password_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_password_title"
            android:importantForAutofill="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>